[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/ui back.png" type="Texture" id=1]
[ext_resource path="res://GUI/play button.png" type="Texture" id=2]
[ext_resource path="res://GUI/game name.png" type="Texture" id=3]
[ext_resource path="res://GUI/credit button.png" type="Texture" id=4]
[ext_resource path="res://scripts/Main Menu.gd" type="Script" id=5]

[node name="Main Menu" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 108.417
margin_top = 43.9188
margin_right = 1081.42
margin_bottom = 590.919
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 334.448
margin_top = 116.634
margin_right = 883.448
margin_bottom = 508.634
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer"]
margin_left = -15.0
margin_top = 55.0397
margin_right = 576.0
margin_bottom = 477.04
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgroudn" type="Sprite" parent="."]
position = Vector2( 500.682, 300.575 )
scale = Vector2( 0.682614, 0.682614 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/TextureButton2" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TextureButton2" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TextureButton2" to="." method="_on_TextureButton_pressed"]
